bounding box and lang

--- a/src/main/resources/assets/potatoutilities/lang/en_us.lang
+++ b/src/main/resources/assets/potatoutilities/lang/en_us.lang
@@ -1,1 +1,5 @@
 item.potatoutilities.plastic.name=Plastic
+tile.potatoutilities.potato_battery.name=Potato Battery
+item.potatoutilities.pleather.name=Pleather
+fluid.liquid_plastic=Liquid Plastic
+fluid.starchy_mixture=Starchy Mixture
